fix(components): Fix form field inconsistent spacing when used under Form and InputGroup JOB-37646 (#762)
* fix: wrap form field in a content

* chore: update snapshot tests

* fix: input group - use grid instead of flex to force childrens

--- a/packages/components/src/InputGroup/InputGroup.css
+++ b/packages/components/src/InputGroup/InputGroup.css
@@ -3,8 +3,8 @@
 }
 
 .horizontal {
-  display: flex;
-  align-items: flex-end;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
 }
 
 .horizontal > *:not(:last-child) {
